--- a/Stock Price Analysis/SC_Stock_Price_Analysis.ipynb
+++ b/Stock Price Analysis/SC_Stock_Price_Analysis.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "4  2008-02-04   AACG   NASDAQ  9.50   9.71  9.50   9.50   0.762811     8300.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "(11470963, 9)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "[470 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "Name: 6898132, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "Name: 6898603, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -757,13 +757,23 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reset index\n",
+    "df.index = list(range(df.shape[0]))"
    ]
   },
   {
@@ -775,21 +785,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Collect names of the stocks in an array\n",
-    "\n",
+    "# collect names of the stocks in an array\n",
     "stocks = df.iloc[:,1].unique().tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# choose 10 random stocks\n",
     "stocks_samp = random.sample(stocks,10)"
    ]
   },
@@ -802,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,23 +840,24 @@
     "        axs.set_ylabel('Price')\n",
     "\n",
     "  figure.suptitle(f'Prices for {ticker}')\n",
-    "  figure.tight_layout(pad=3.0)\n"
+    "  figure.tight_layout(pad=3.0)\n",
+    "  plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee1d80dbf0eb471994b91709cd95f9f9",
+       "model_id": "cc2bbb0579e54698893a73c39bf8210d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='ticker', options=('NCMI', 'BWFG', 'RVMD', 'PPC', 'CARM', 'PFC', 'T…"
+       "interactive(children=(Dropdown(description='ticker', options=('FHB', 'NMIH', 'ESQ', 'SANA', 'MDXG', 'ACT', 'FW…"
       ]
      },
      "metadata": {},
@@ -858,7 +869,7 @@
        "<function __main__.plot_stock_price(ticker)>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1020,7 @@
        "4    0.00    0.21  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,18 +1060,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e27dab14263e484293ce1e71c2b897ee",
+       "model_id": "808dd8382ff341f6994be0faae911abe",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='ticker', options=('NCMI', 'BWFG', 'RVMD', 'PPC', 'CARM', 'PFC', 'T…"
+       "interactive(children=(Dropdown(description='ticker', options=('FHB', 'NMIH', 'ESQ', 'SANA', 'MDXG', 'ACT', 'FW…"
       ]
      },
      "metadata": {},
@@ -1072,7 +1083,7 @@
        "<function __main__.plot_delta(ticker)>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,141 +1095,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_close = df[[\"Date\",\"Ticker\",\"Close\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates_index = []\n",
+    "for i in range(df_close.shape[0]):\n",
+    "    yr = df_close['Date'][i].year\n",
+    "    if yr >= 2010:\n",
+    "        dates_index.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Ticker</th>\n",
-       "      <th>Exchange</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Delta1</th>\n",
-       "      <th>Delta2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2008-01-29</td>\n",
-       "      <td>AACG</td>\n",
-       "      <td>NASDAQ</td>\n",
-       "      <td>9.50</td>\n",
-       "      <td>9.99</td>\n",
-       "      <td>8.57</td>\n",
-       "      <td>8.75</td>\n",
-       "      <td>0.702589</td>\n",
-       "      <td>1489000.0</td>\n",
-       "      <td>-0.75</td>\n",
-       "      <td>1.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2008-01-30</td>\n",
-       "      <td>AACG</td>\n",
-       "      <td>NASDAQ</td>\n",
-       "      <td>8.75</td>\n",
-       "      <td>9.15</td>\n",
-       "      <td>8.30</td>\n",
-       "      <td>8.50</td>\n",
-       "      <td>0.682515</td>\n",
-       "      <td>219000.0</td>\n",
-       "      <td>-0.25</td>\n",
-       "      <td>0.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2008-01-31</td>\n",
-       "      <td>AACG</td>\n",
-       "      <td>NASDAQ</td>\n",
-       "      <td>8.49</td>\n",
-       "      <td>10.30</td>\n",
-       "      <td>8.49</td>\n",
-       "      <td>9.55</td>\n",
-       "      <td>0.766826</td>\n",
-       "      <td>182300.0</td>\n",
-       "      <td>1.06</td>\n",
-       "      <td>1.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2008-02-01</td>\n",
-       "      <td>AACG</td>\n",
-       "      <td>NASDAQ</td>\n",
-       "      <td>9.93</td>\n",
-       "      <td>9.94</td>\n",
-       "      <td>9.50</td>\n",
-       "      <td>9.51</td>\n",
-       "      <td>0.763614</td>\n",
-       "      <td>28200.0</td>\n",
-       "      <td>-0.42</td>\n",
-       "      <td>0.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2008-02-04</td>\n",
-       "      <td>AACG</td>\n",
-       "      <td>NASDAQ</td>\n",
-       "      <td>9.50</td>\n",
-       "      <td>9.71</td>\n",
-       "      <td>9.50</td>\n",
-       "      <td>9.50</td>\n",
-       "      <td>0.762811</td>\n",
-       "      <td>8300.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.21</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        Date Ticker Exchange  Open   High   Low  Close  Adj Close     Volume  \\\n",
-       "0 2008-01-29   AACG   NASDAQ  9.50   9.99  8.57   8.75   0.702589  1489000.0   \n",
-       "1 2008-01-30   AACG   NASDAQ  8.75   9.15  8.30   8.50   0.682515   219000.0   \n",
-       "2 2008-01-31   AACG   NASDAQ  8.49  10.30  8.49   9.55   0.766826   182300.0   \n",
-       "3 2008-02-01   AACG   NASDAQ  9.93   9.94  9.50   9.51   0.763614    28200.0   \n",
-       "4 2008-02-04   AACG   NASDAQ  9.50   9.71  9.50   9.50   0.762811     8300.0   \n",
-       "\n",
-       "   Delta1  Delta2  \n",
-       "0   -0.75    1.42  \n",
-       "1   -0.25    0.85  \n",
-       "2    1.06    1.81  \n",
-       "3   -0.42    0.44  \n",
-       "4    0.00    0.21  "
+       "Date        3621\n",
+       "Ticker      3355\n",
+       "Close     269428\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df_close.iloc[dates_index].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2024-05-22 00:00:00')"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_close[df[\"Ticker\"] == stocks[0]]['Date'].max()"
    ]
   },
   {
@@ -2459,6 +2396,13 @@
     "plt.figure(figsize=(15,7))\n",
     "plt.plot(df_stock['Call_Prices'])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Portfolio creation"
    ]
   },
   {
